Push image after build

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,4 @@ script:
     - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
     - export GOPATH=$HOME/go/
     - make all
+    - docker push rubenv/osmtopo
