--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
 
 script:
     - mkdir -p $HOME/go/src/github.com/rubenv/
-    - ln -s . $HOME/go/src/github.com/rubenv/osmtopo/
+    - ln -s . $HOME/go/src/github.com/rubenv/osmtopo
     - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
     - export GOPATH=$HOME/go/
     - make all
