--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,8 @@ services:
     - docker
 
 script:
-    - set -e
     - mkdir -p $HOME/go/src/github.com/rubenv/
     - ln -s . $HOME/go/src/github.com/rubenv/osmtopo
     - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
     - export GOPATH=$HOME/go/
-    - make all
-    - docker push rubenv/osmtopo
+    - make all push
