--- a/Dockerfile-base
+++ b/Dockerfile-base
@@ -1,4 +1,20 @@
 FROM fedora:23
 
-RUN dnf -y install geos-devel leveldb-devel && \
+RUN dnf -y install geos-devel zlib-devel bzip2-devel gcc-c++ make wget tar find && \
+    wget https://gflags.googlecode.com/files/gflags-2.0-no-svn-files.tar.gz && \
+    tar -xzvf gflags-2.0-no-svn-files.tar.gz && \
+    cd gflags-2.0 && \
+    ./configure && make && make install && \
+    cd .. && rm -rf gflags-2.0* && \
+    wget https://github.com/google/snappy/releases/download/1.1.3/snappy-1.1.3.tar.gz && \
+    tar -xzvf snappy-1.1.3.tar.gz && \
+    cd snappy-1.1.3 && \
+    ./configure && make && make install && \
+    cd .. && rm -rf snappy-1.1.3* && \
+    wget -O rocksdb-4.2.tar.gz https://github.com/facebook/rocksdb/archive/v4.2.tar.gz && \
+    tar -xzvf rocksdb-4.2.tar.gz && \
+    cd rocksdb-4.2 && \
+    make static_lib && make shared_lib && make install && \
+    cd .. && rm -rf rocksdb-4.2* && \
+    dnf -y remove gcc-c++ tar wget make && \
     dnf clean all
