Use correct package, install headers

--- a/Dockerfile-base
+++ b/Dockerfile-base
@@ -1,6 +1,6 @@
 FROM fedora:23
 
-RUN dnf -y install geos-devel zlib-devel bzip2-devel gcc-c++ make wget tar find && \
+RUN dnf -y install geos-devel zlib-devel bzip2-devel gcc-c++ make wget tar findutils && \
     wget https://gflags.googlecode.com/files/gflags-2.0-no-svn-files.tar.gz && \
     tar -xzvf gflags-2.0-no-svn-files.tar.gz && \
     cd gflags-2.0 && \
@@ -14,7 +14,7 @@ RUN dnf -y install geos-devel zlib-devel bzip2-devel gcc-c++ make wget tar find 
     wget -O rocksdb-4.2.tar.gz https://github.com/facebook/rocksdb/archive/v4.2.tar.gz && \
     tar -xzvf rocksdb-4.2.tar.gz && \
     cd rocksdb-4.2 && \
-    make static_lib && make shared_lib && make install && \
+    make static_lib && make shared_lib && make install install-headers && \
     cd .. && rm -rf rocksdb-4.2* && \
     dnf -y remove gcc-c++ tar wget make && \
     dnf clean all
