Explicitly install shared lib

--- a/Dockerfile-base
+++ b/Dockerfile-base
@@ -14,7 +14,7 @@ RUN dnf -y install geos-devel zlib-devel bzip2-devel gcc-c++ make wget tar findu
     wget -O rocksdb-4.2.tar.gz https://github.com/facebook/rocksdb/archive/v4.2.tar.gz && \
     tar -xzvf rocksdb-4.2.tar.gz && \
     cd rocksdb-4.2 && \
-    make static_lib && make shared_lib && make install install-headers && \
+    make static_lib && make shared_lib && make install install-shared install-headers && \
     cd .. && rm -rf rocksdb-4.2* && \
     dnf -y remove gcc-c++ tar wget make && \
     dnf clean all
