--- a/osmtopo/testconfigs/man/config.yaml
+++ b/osmtopo/testconfigs/man/config.yaml
@@ -6,3 +6,22 @@ languages:
 layer:
   name: Isle of Man
   id: 62269
+  children:
+    - name: Ayre
+      id: 1061144
+      load: ayre-cities.yaml
+    - name: Glenfaba
+      id: 1061147
+      load: glenfaba-cities.yaml
+    - name: Garff
+      id: 1061145
+      load: garff-cities.yaml
+    - name: Michael
+      id: 1028022
+      load: michael-cities.yaml
+    - name: Rushen
+      id: 1061135
+      load: rushen-cities.yaml
+    - name: Middle
+      id: 1061146
+      load: middle-cities.yaml
