Add resume support for when imports fail

--- a/osmtopo/model/Makefile
+++ b/osmtopo/model/Makefile
@@ -6,7 +6,7 @@ all: $(addsuffix .pb.go, $(SOURCES))
 %.pb.go: %.proto
 	protoc -I/usr/local/include -I. \
 		-I$(GOPATH)/src \
-		--gofast_out=plugins=grpc:. \
+		--gofast_out=. \
 		$<
 
 clean:
