Make Andorra config more sensible

--- a/config-andorra.yaml
+++ b/config-andorra.yaml
@@ -4,9 +4,6 @@ sources:
         update: http://download.geofabrik.de/europe/andorra-updates/
 
 layers:
-    - id: districts
-      name: Districts
-      admin_levels: [4]
-    - id: cities
-      name: Cities
-      admin_levels: [8]
+    - id: communes
+      name: Communes
+      admin_levels: [7]
