--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,6 +1,7 @@
 FROM docker.io/rubenv/osmtopo-base
 
-RUN dnf -y install golang git && \
+RUN curl --silent --location https://dl.yarnpkg.com/rpm/yarn.repo > /etc/yum.repos.d/yarn.repo && \
+    dnf -y install golang git nodejs yarn && \
     dnf clean all
 
 ENV GOPATH /go
