--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,13 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "bootstrap": "^4.1.2",
+        "mobx": "^5.0.3",
+        "mobx-react": "^5.2.3",
         "react": "^16.4.1",
         "react-dom": "^16.4.1",
-        "react-scripts-ts": "2.16.0"
+        "react-scripts-ts": "2.16.0",
+        "reactstrap": "^6.3.0"
     },
     "scripts": {
         "start": "react-scripts-ts start",
@@ -23,6 +27,8 @@
         "@types/node": "^10.5.2",
         "@types/react": "^16.4.6",
         "@types/react-dom": "^16.0.6",
+        "@types/reactstrap": "^6.0.0",
+        "@types/webpack-env": "^1.13.6",
         "typescript": "^2.9.2"
     }
 }
