Switch to react-app-rewired

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,14 +8,13 @@
         "mobx-react": "^5.2.3",
         "react": "^16.4.1",
         "react-dom": "^16.4.1",
-        "react-scripts-ts": "2.16.0",
         "reactstrap": "^6.3.0"
     },
     "scripts": {
-        "start": "react-scripts-ts start",
-        "build": "react-scripts-ts build",
-        "test": "react-scripts-ts test --env=jsdom",
-        "eject": "react-scripts-ts eject"
+        "start": "react-app-rewired start",
+        "build": "react-app-rewired build",
+        "test": "react-app-rewired test --env=jsdom",
+        "eject": "react-app-rewired eject"
     },
     "proxy": {
         "/api": {
@@ -29,6 +28,10 @@
         "@types/react-dom": "^16.0.6",
         "@types/reactstrap": "^6.0.0",
         "@types/webpack-env": "^1.13.6",
+        "react-app-rewire-scss": "^1.0.2",
+        "react-app-rewire-typescript": "^2.0.2",
+        "react-app-rewired": "^1.5.2",
+        "react-scripts": "^1.1.4",
         "typescript": "^2.9.2"
     }
 }
