--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,12 @@
     "private": true,
     "dependencies": {
         "bootstrap": "^4.1.2",
+        "leaflet": "^1.3.3",
         "mobx": "^5.0.3",
         "mobx-react": "^5.2.3",
         "react": "^16.4.1",
         "react-dom": "^16.4.1",
+        "react-leaflet": "^2.0.0",
         "reactstrap": "^6.3.0"
     },
     "scripts": {
